# aegisv2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_READINESS_GITHUB.md  pyproject.toml
backend/: __init__.py
backend/analysis/: __init__.py  criticality.py  dependency.py  exposure.py  impact.py  query.py  risk.py  selftest.py
backend/api/: __init__.py  __main__.py  app.py  dependencies.py  rate_limiter.py  responses.py  security.py  selftest.py
backend/apql/: __init__.py  ast.py  executor.py  parser.py  planner.py  selftest.py
backend/connectors/: __init__.py  base.py  (+7 more)
docs/: CONNECTOR_PRODUCTION_VALIDATION.md  CONNECTOR_VALIDATION_REPORT.md  EXECUTIVE_TRUST_AUDIT.md  EXPLAINABILITY_AUDIT.md  GENERAL_AVAILABILITY_REPORT.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_GUIDE.md  PERFORMANCE_SCALE_REPORT.md  PROJECT_CONTEXT.md  REALITY_AUDIT.md  RECOMMENDATION_QUALITY_REPORT.md  RELEASE_CANDIDATE_CERTIFICATION.md  RELEASE_READINESS_V3.md  TRUST_MODEL.md  USER_EXPERIENCE_AUDIT.md  UX_VALIDATION_REPORT.md  aws_blackbox_audit.md  blackbox_audit.md  certification_audit_v1.md  feature_reality_audit.md  final_release_audit.md  final_release_candidate_audit.md  final_zero_trust_release_audit.md  finalaudit.md  forensic_reality_audit.md  post_remediation_audit.md  release_blocker_elimination_report.md  remediation_sprint.md  routing_audit.md  runtime_audit.md  source_code_audit.md  source_of_truth_audit.md  top_25_deep_dive.md  zero_trust_audit.md  zero_trust_software_audit.md
frontend/: fix_ts.py  fix_ts2.py  package-lock.json  package.json
tests/: test_health.py
(+337 files in other folders)
