[project]
name = "aegis-cceip"
version = "0.1.0"
description = "Aegis CCEIP — Cyber Exposure & Cyber Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
aegis = "backend.api.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
